--- a/Blogpost.html
+++ b/Blogpost.html
@@ -14,6 +14,9 @@
             <div id="post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explciar las cosas increibles que se pueden hacer con ramas</p>
+                <p>
+                    Todo lo que veas aqui es para el futuro😉
+                </p>
             </div>
         </div>
             
